# maddi: a modification analyzer for duplication detection and immutability.
# Copyright 2020-2025, Bart Naudts, https://github.com/CodeLaser/maddi
#
# This program is free software: you can redistribute it and/or modify it under the
# terms of the GNU Lesser General Public License as published by the Free Software
# Foundation, either version 3 of the License, or (at your option) any later version.
# This program is distributed in the hope that it will be useful, but WITHOUT ANY
# WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
# FOR A PARTICULAR PURPOSE.  See the GNU Lesser General Public License for
# more details. You should have received a copy of the GNU Lesser General Public
# License along with this program.  If not, see <http://www.gnu.org/licenses/>.

load("//:java_library_conventions.bzl", "maddi_java_library", "maddi_java_test")

maddi_java_library(
    name = "maddi-modification-prepwork",
    srcs = glob(["src/main/java/**/*.java"]),
    javacopts = [ "-Xep:ComparableType:WARN" ],
    visibility = ["//visibility:public"],  # or ["//visibility:private"] for internal-only
    #    resources = glob(["src/main/resources/**/*"]),
    deps = [
        "//maddi-cst-analysis",
        "//maddi-cst-api",
        "//maddi-cst-impl",
        "//maddi-cst-io",
        "//maddi-cst-print",
        "//maddi-graph",
        "//maddi-inspection-api",
        "//maddi-inspection-integration",
        "//maddi-inspection-parser",
        "//maddi-inspection-resource",
        "//maddi-java-bytecode",
        "//maddi-java-parser",
        "//maddi-modification-common",
        "//maddi-support",
        "//maddi-util",
    ],
)

maddi_java_test(
    name = "maddi-modification-prepwork_test",
    size = "small",  # or "medium", "large"
    srcs = glob(["src/test/java/**/*.java"]),
    test_packages = ["org.e2immu.analyzer.modification.prepwork"],
    deps = [
        # the main library and its dependencies
        ":maddi-modification-prepwork",
        "//maddi-cst-api",
        "//maddi-inspection-integration",
        "//maddi-support",
        "//maddi-inspection-api",
        "//maddi-util",
        "//maddi-graph",
        "//maddi-cst-impl",
        "//maddi-cst-io",
        "//maddi-cst-analysis",
        "//maddi-cst-print",
        "//maddi-inspection-parser",
        "//maddi-inspection-resource",
        "//maddi-modification-common",
        "//maddi-java-parser",
        "//maddi-java-bytecode",
    ],
)
