# Example subproject BUILD.bazel file
# Place this in each of your subproject directories (e.g., myproject/BUILD.bazel)

load("//:java_library_conventions.bzl", "codelaser_java_library", "codelaser_java_test")

codelaser_java_library(
    name = "maddi-run-config",
    srcs = glob(["src/main/java/**/*.java"]),
    visibility = ["//visibility:public"],  # or ["//visibility:private"] for internal-only
    deps = [
        "//maddi-aapi-parser",
        "//maddi-cst-api",
        "//maddi-cst-impl",
        "//maddi-graph",
        "//maddi-inspection-api",
        "//maddi-inspection-resource",
        "//maddi-support",
        "//maddi-util",
        "@maven//:com_fasterxml_jackson_core_jackson_annotations",
        "@maven//:com_fasterxml_jackson_core_jackson_core",
        "@maven//:com_fasterxml_jackson_core_jackson_databind",
    ],
)

codelaser_java_test(
    name = "maddi-run-config_test",
    size = "small",  # or "medium", "large"
    srcs = glob(["src/test/java/**/*.java"]),
    test_packages = ["org.e2immu.analyzer.run.config.util"],
    deps = [
        ":maddi-run-config",  # Depend on the main library
        "//maddi-aapi-parser",
        "//maddi-cst-api",
        "//maddi-cst-impl",
        "//maddi-graph",
        "//maddi-inspection-api",
        "//maddi-inspection-resource",
        "//maddi-support",
        "//maddi-util",
        "@maven//:com_fasterxml_jackson_core_jackson_core",
        "@maven//:com_fasterxml_jackson_core_jackson_databind",
    ],
)
