# maddi: a modification analyzer for duplication detection and immutability.
# Copyright 2020-2025, Bart Naudts, https://github.com/CodeLaser/maddi
#
# This program is free software: you can redistribute it and/or modify it under the
# terms of the GNU Lesser General Public License as published by the Free Software
# Foundation, either version 3 of the License, or (at your option) any later version.
# This program is distributed in the hope that it will be useful, but WITHOUT ANY
# WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
# FOR A PARTICULAR PURPOSE.  See the GNU Lesser General Public License for
# more details. You should have received a copy of the GNU Lesser General Public
# License along with this program.  If not, see <http://www.gnu.org/licenses/>.

load("//:java_library_conventions.bzl", "maddi_java_library", "maddi_java_test")

maddi_java_library(
    name = "maddi-run-config",
    srcs = glob(["src/main/java/**/*.java"]),
    visibility = ["//visibility:public"],  # or ["//visibility:private"] for internal-only
    deps = [
        "//maddi-aapi-parser",
        "//maddi-cst-api",
        "//maddi-cst-impl",
        "//maddi-graph",
        "//maddi-inspection-api",
        "//maddi-inspection-resource",
        "//maddi-support",
        "//maddi-util",
        "@maven//:com_fasterxml_jackson_core_jackson_annotations",
        "@maven//:com_fasterxml_jackson_core_jackson_core",
        "@maven//:com_fasterxml_jackson_core_jackson_databind",
    ],
)

maddi_java_test(
    name = "maddi-run-config_test",
    size = "small",  # or "medium", "large"
    srcs = glob(["src/test/java/**/*.java"]),
    test_packages = ["org.e2immu.analyzer.run.config.util"],
    deps = [
        ":maddi-run-config",  # Depend on the main library
        "//maddi-aapi-parser",
        "//maddi-cst-api",
        "//maddi-cst-impl",
        "//maddi-graph",
        "//maddi-inspection-api",
        "//maddi-inspection-resource",
        "//maddi-support",
        "//maddi-util",
        "@maven//:com_fasterxml_jackson_core_jackson_core",
        "@maven//:com_fasterxml_jackson_core_jackson_databind",
    ],
)
