# Example subproject BUILD.bazel file
# Place this in each of your subproject directories (e.g., myproject/BUILD.bazel)

load("//:java_library_conventions.bzl", "maddi_javalibrary", "maddi_javatest")

# Main library target
maddi_javalibrary(
    name = "maddi-run-main",
    srcs = glob(["src/main/java/**/*.java"]),
    visibility = ["//visibility:public"],  # or ["//visibility:private"] for internal-only
    deps = [
        "//maddi-aapi-archive",
        "//maddi-aapi-parser",
        "//maddi-cst-analysis",
        "//maddi-cst-api",
        "//maddi-cst-impl",
        "//maddi-cst-io",
        "//maddi-cst-print",
        "//maddi-graph",
        "//maddi-inspection-api",
        "//maddi-inspection-integration",
        "//maddi-inspection-parser",
        "//maddi-inspection-resource",
        "//maddi-java-bytecode",
        "//maddi-java-parser",
        "//maddi-modification-common",
        "//maddi-modification-io",
        "//maddi-modification-linkedvariables",
        "//maddi-modification-prepwork",
        "//maddi-run-config",
        "//maddi-support",
        "//maddi-util",
        "@maven//:ch_qos_logback_logback_classic",
        "@maven//:com_fasterxml_jackson_core_jackson_databind",
        "@maven//:commons_cli_commons_cli",
    ],
)

maddi_javatest(
    name = "maddi-run-main_test",
    size = "small",  # or "medium", "large"
    srcs = glob(["src/test/java/**/*.java"]),
    resource_strip_prefix = "maddi-run-main/src/test/resources",  # Important!
    resources = glob(["src/test/resources/**"]),  # Add this too
    test_packages = ["org.e2immu.analyzer.run.main"],
    deps = [
        ":maddi-run-main",  # Depend on the main library
        "//maddi-aapi-archive",
        "//maddi-cst-analysis",
        "//maddi-cst-api",
        "//maddi-cst-impl",
        "//maddi-cst-io",
        "//maddi-cst-print",
        "//maddi-graph",
        "//maddi-inspection-api",
        "//maddi-inspection-integration",
        "//maddi-inspection-parser",
        "//maddi-inspection-resource",
        "//maddi-java-bytecode",
        "//maddi-java-parser",
        "//maddi-modification-common",
        "//maddi-modification-io",
        "//maddi-modification-prepwork",
        "//maddi-support",
        "//maddi-util",
    ],
)
