# maddi: a modification analyzer for duplication detection and immutability.
# Copyright 2020-2025, Bart Naudts, https://github.com/CodeLaser/maddi
#
# This program is free software: you can redistribute it and/or modify it under the
# terms of the GNU Lesser General Public License as published by the Free Software
# Foundation, either version 3 of the License, or (at your option) any later version.
# This program is distributed in the hope that it will be useful, but WITHOUT ANY
# WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
# FOR A PARTICULAR PURPOSE.  See the GNU Lesser General Public License for
# more details. You should have received a copy of the GNU Lesser General Public
# License along with this program.  If not, see <http://www.gnu.org/licenses/>.

load("@rules_java//java:defs.bzl", "java_binary")
load("//:java_library_conventions.bzl", "maddi_java_library")
load("//:platform.bzl", "OPENJDK_JAVAC_EXPORTS")

maddi_java_library(
    name = "maddi-run-openjdk",
    srcs = glob(["src/main/java/**/*.java"]),
    javacopts = OPENJDK_JAVAC_EXPORTS,
    visibility = ["//visibility:public"],
    deps = [
        "//maddi-aapi-parser",
        "//maddi-cst-analysis",
        "//maddi-cst-api",
        "//maddi-cst-impl",
        "//maddi-cst-io",
        "//maddi-cst-print",
        "//maddi-graph",
        "//maddi-inspection-api",
        "//maddi-inspection-openjdk",
        "//maddi-inspection-resource",
        "//maddi-java-openjdk",
        "//maddi-java-parser",
        "//maddi-modification-analyzer",
        "//maddi-modification-common",
        "//maddi-modification-link",
        "//maddi-modification-prepwork",
        "//maddi-run-config",
        "//maddi-run-rewire",
        "//maddi-util",
        "@maven//:ch_qos_logback_logback_classic",
        "@maven//:com_fasterxml_jackson_core_jackson_databind",
        "@maven//:commons_cli_commons_cli",
    ],
)

# 'application' plugin equivalent: the openjdk-parser-based `maddi` CLI
java_binary(
    name = "maddi",
    main_class = "org.e2immu.analyzer.run.openjdkmain.Main",
    visibility = ["//visibility:public"],
    jvm_flags = OPENJDK_JAVAC_EXPORTS,
    runtime_deps = [
        ":maddi-run-openjdk",
        "//maddi-aapi-archive",  # runtimeOnly: shipped analysis-result jars
    ],
)
