# maddi: a modification analyzer for duplication detection and immutability.
# Copyright 2020-2026, Bart Naudts, https://github.com/CodeLaser/maddi
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("//:java_library_conventions.bzl", "maddi_java_library", "maddi_java_test")
load("//:platform.bzl", "COMMON_JAVA_DEPS", "COMMON_JAVA_TEST_DEPS")


# Main library target
maddi_java_library(
    name = "maddi-support",
    srcs = glob(["src/main/java/**/*.java"]),
 #   resources = glob(["src/main/resources/**/*"]),
    deps = [
        # Add your specific dependencies here, e.g.:
        # "@maven//:org_jgrapht_jgrapht_core",
        # "//other-project:other-project",
    ],
    visibility = ["//visibility:public"],  # or ["//visibility:private"] for internal-only
)

# Test target
maddi_java_test(
    name = "maddi-support_test",
    srcs = glob(["src/test/java/**/*.java"]),
#    resources = glob(["src/test/resources/**/*"]),
    deps = [
        ":maddi-support",  # Depend on the main library
        # Add additional test-specific dependencies here
    ],
    size = "small",  # or "medium", "large"
    test_packages = [ "org.e2immu.support", ],
)
